RESOLVED FIXED204280
REGRESSION (r243606): Interacting with date and time pickers hangs the UI process on watchOS
https://bugs.webkit.org/show_bug.cgi?id=204280
Summary REGRESSION (r243606): Interacting with date and time pickers hangs the UI pro...
Wenson Hsieh
Reported 2019-11-16 16:56:58 PST
Attachments
Patch (6.27 KB, patch)
2019-11-16 18:45 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-11-16 16:57:41 PST
This is also responsible for fast/forms/watchos/time-picker-value-change.html timing out.
Wenson Hsieh
Comment 2 2019-11-16 18:45:51 PST
WebKit Commit Bot
Comment 3 2019-11-16 20:04:22 PST
Comment on attachment 383710 [details] Patch Clearing flags on attachment: 383710 Committed r252529: <https://trac.webkit.org/changeset/252529>
WebKit Commit Bot
Comment 4 2019-11-16 20:04:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.